--- a/Project3/style.css
+++ b/Project3/style.css
@@ -22,6 +22,15 @@ body{
 .heading{
     font-size: 28px;
 }
+.btn{
+    border-radius: 30px;
+    border: 0;
+    transition: all 300ms ease;
+}
+.btn:active{
+    transform: scale(0.95);
+}
+
 .input{
     height: 53px;
     width: 300px;
